Theme/ElegantFin-theme-nightly.css
/* ... */
/* Material Icons Round */
/* https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200 */
@font-face {
    font-family: "Material Icons Round";
    font-style: normal;
    font-weight: 100 700;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/materialsymbolsrounded/v267/sykg-zNym6YjUruM-QrEh7-nyTnjDwKNJ_190Fjzag.woff2)
        format("woff2");
}

.material-icons {
    font-family: var(--iconPack) !important;
    font-weight: normal;
    font-style: normal;
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
    line-height: 1;
    vertical-align: middle;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    -moz-osx-font-smoothing: grayscale;
    font-feature-settings: "liga";
    font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
}

.material-icons.info_outline:before {
    content: "\e88e";
    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
}

.dashboardFooter {
    font-family: "Noto Sans", serif;
    transition: transform 50ms;
}

#myPreferencesMenuPage > div:after,
.dashboardFooter::after {
    content: var(--elegantFinFooterText);
    font-size: 0.8em;
    color: var(--borderColor);
    display: inline-grid;
    width: 100%;
    width: -webkit-fill-available;
    justify-content: center;
    font-weight: 600;
}

::selection {
    background: var(--activeColorAlpha);
}

.cardImageIcon {
    color: var(--borderColor);
}

.cardPadder .cardImageIcon {
    color: var(--selectorBackgroundColorAlpha);
}

.card:focus .cardBox.visualCardBox,
.card:focus .cardBox:not(.visualCardBox) .cardScalable {
    border-color: white !important;
}

.mdl-radio__focus-circle,
.mdl-radio.show-focus .mdl-radio__button:focus + .mdl-radio__circles .mdl-radio__outer-circle,
.mdl-radio.show-focus .mdl-radio__button:focus + .mdl-radio__circles .mdl-radio__inner-circle {
    background: var(--uiAccentColor);
    color: var(--uiAccentColor);
}

.emby-button.show-focus:focus,
.paper-icon-button-light.show-focus:focus,
.emby-tabs .emby-button.show-focus:focus {
    background-color: var(--highlightOutlineColor) !important;
    color: #fff !important;
}

.emby-tabs .emby-button.show-focus:focus {
    outline: none !important;
}

[dir="ltr"] .itemsContainer > .card > .cardBox {
    margin-left: auto;
    margin-right: auto;
}

.cardBox-bottompadded {
    margin-bottom: 0.5em !important;
}

@media (max-width: 50em) {
    .cardBox-bottompadded {
        margin-bottom: 0.25em !important;
    }
}

.vertical-wrap:not(.centered) {
    justify-content: flex-start !important;
}

.countIndicator,
.fullSyncIndicator,
.mediaSourceIndicator {
    background: rgb(31, 80, 189);
    border: var(--defaultLighterBorder);
}

.cardScalable {
    border-radius: var(--largeRadius);
    border: var(--darkerBorderColor) solid var(--borderWidthDouble) !important;
    overflow: hidden !important;
    box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.4);
    transition: transform 125ms;
}

@supports (aspect-ratio: 1 / 1) {
    #castCollapsible .cardScalable,
    #guestCastContent .cardScalable {
        aspect-ratio: 1 / 1;
        border-radius: 50%;
    }
}

#castCollapsible .cardContent.cardImageContainer,
#guestCastContent .cardContent.cardImageContainer {
    background-position-y: 33%;
}

.layout-mobile .cardScalable {
    border: var(--defaultBorder) !important;
}

.visualCardBox,
.paperList {
    background-color: var(--headerColor) !important;
    border-radius: var(--largeRadius) !important;
    border: var(--defaultBorder) !important;
    box-shadow: unset !important;
    overflow: hidden;
}

.layout-desktop .visualCardBox {
    border-width: var(--borderWidthDouble) !important;
}

.visualCardBox .cardScalable {
    border-width: 0 0 var(--borderWidth) 0 !important;
    border-radius: 0 !important;
    border-color: var(--darkerBorderColor) !important;
}

.cardImageContainer {
    transition: transform 0.375s;
}

.card.squareCard[data-type="TvChannel"] .cardImageContainer.cardContent {
    background-color: rgba(255, 255, 255, 0.2);
}

.cardImageContainer > .cardDefaultText {
    font-size: 2em;
    padding-top: 1.5em;
    color: transparent;
    white-space: pre;
}

.cardImageContainer > .cardDefaultText::before {
    content: "?\A";
    color: var(--borderColor);
}

.card-hoverable:hover .cardScalable,
.card-hoverable:hover .visualCardBox {
    border-color: white !important;
}

.card-hoverable:hover .visualCardBox .cardScalable {
    border-color: var(--darkerBorderColor) !important;
}

.card-hoverable:hover .cardImageContainer {
    transform: scale(1.025);
}

.card-hoverable .itemSelectionPanel {
    transition: transform 0.125s;
}

.card-hoverable:hover .cardScalable,
.card-hoverable:hover .itemSelectionPanel {
    transform: scale(1.02);
}

.card-hoverable .cardScalable:active {
    transition: transform 0.075s;
    transform: scale(1);
}

.cardScalable:has(.cardOverlayButton-hover:hover) > .cardImageContainer {
    transform: scale(1);
}

.cardOverlayContainer {
    transition: 0.5s;
    background: rgba(255, 255, 255, 0.05);
}

.cardOverlayContainer:after {
    content: var(--cardHoverEffect);
    transition: 0.5s;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transform: translateY(-50%) translateX(0);
    background: var(--hoverGradientV);
}

.card-hoverable:hover .cardOverlayContainer:after {
    transform: translateY(50%) translateX(0);
    opacity: 0;
}

.backdropCard.card-hoverable .cardOverlayContainer:after,
.overflowBackdropCard.card-hoverable .cardOverlayContainer:after {
    transform: translateY(0) translateX(-50%);
    background: var(--hoverGradientH);
}
/* ... */

